fixed close icon too dark on hover

--- a/src/app/_components/navbar/navbar.component.scss
+++ b/src/app/_components/navbar/navbar.component.scss
@@ -52,6 +52,9 @@
         &.close:hover {
             background-color: red;
             opacity: 1;
+            img {
+                opacity: 1;
+            }
         }
     }
     .nav-item.disabled:hover {
